[gd_scene load_steps=4 format=3 uid="uid://cnhrfspiudfb3"]

[ext_resource type="Script" uid="uid://chnar8phiqs4b" path="res://scenes/soda_pickup/soda_pickup.gd" id="1_emqpm"]
[ext_resource type="Texture2D" uid="uid://wierbtudhuho" path="res://scenes/soda_pickup/assets/soda_can.png" id="2_nlhbv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nlhbv"]
radius = 19.25

[node name="SodaPickup" type="Node2D" groups=["soda_cans"]]
script = ExtResource("1_emqpm")

[node name="SodaSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_nlhbv")

[node name="SodaArea2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SodaArea2D"]
shape = SubResource("CircleShape2D_nlhbv")
